# ISRPO_lab6

./: CMakeLists.txt  README.md  main.cpp
googletest-main/: CMakeLists.txt
